--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
         <li><a href="#hero" class="active"><i class="fas fa-home navicon"></i><span>Home</span></a></li>
         <li><a href="#about"><i class="fas fa-user navicon"></i><span>About</span></a></li>
         <li><a href="#resume"><i class="fas fa-file-alt navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="fas fa-images navicon"></i><span>Portfolio</span></a></li>
         <li><a href="#services"><i class="fas fa-briefcase navicon"></i><span>Services</span></a></li>
         <li><a href="#contact"><i class="fas fa-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
@@ -533,8 +532,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+        <p>These are the necessary details for contacting us</p>
+    </div><!-- End Section Title -->
+    
 
       <div class="container" data-aos="fade" data-aos-delay="100">
 
