--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
   <footer id="footer" class="footer position-relative">
     <div class="container">
       <div class="social-links d-flex justify-content-center">
-        <img src="./assets/img/ELISA/log.png" style=" width: 350px; object-fit: cover;"  alt="">
+        <img src="./assets/img/ELISA/log.png" style=" width: 350px; height: 200px; object-fit: cover;"  alt="">
       </div>
       <div class="container">
         <div class="copyright">
